Updated action permissions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ on:
 
 jobs:
   deploy:
+    permissions:
+      contents: read
+      pages: write
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
     steps:
