--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   deploy:
     permissions:
-      contents: read
+      contents: write
       pages: write
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
